--- a/contact.html
+++ b/contact.html
@@ -6,31 +6,35 @@
         <title>Feby's page</title>
         <link rel="icon" href="assets/img/FZ-removebg-preview.png">
         <link rel="stylesheet" href="assets/css/style.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     </head>
     <body>
-
         <!-- NAVBAR -->
-        <nav>
-            <div class="main-menu">
-                <ul class="navbar-links">
-                    <img src="assets/img/FZ-removebg-preview.png">
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="project.html">My Project</a>
-                    </li>
-                    <li>
-                        <a href="testimonials.html">Testimonials</a>
-                    </li>
+        <nav class="navbar navbar-expand-lg bg-body-cornflowerblue">
+            <div class="container-sm">
+                <a class="navbar-brand" href="#">
+                <img src="assets/img/FZ-removebg-preview.png" alt="personal-web" width="90" height="70">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="project.html">My Project</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="testimonials.html">Testimonials</a>
+                  </li>
                 </ul>
-                    <a class="nav-contact-button" href="contact.html">Contact Me</a>
+                <a class="btn active btn-aliceblue" href="contact.html">Contact Me</a>
+              </div>
             </div>
-            <div class="mobile-menu">
-                <img src="assets/img/FZ-removebg-preview.png">
-                <button type="button" id="hamburger-button" class="hamburger-button">☰</button>
-            </div>
-        </nav>
+          </nav>
 
         <div id="mobile-menu-list" class="mobile-menu-list" class="mobile-menu-hide">
             <a href="index.html">Home</a>
@@ -88,6 +92,7 @@
         <!-- <script src="assets/js/belajar-js.js"></script> -->
         <script src="assets/js/contact-form.js"></script>
         <script src="assets/js/navbar.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     </body>
 </html>
